
	Makefile: Pass CFLAGS to the compiler when invoking the linker.
	Some CFLAGS imply effects on the linker too (e.g., -fsanitize=),
	so they must get passed within the linker rule as well.
	* libs/Makefile: Pass CFLAGS to the compiler when linking.
	* pam_tcb/Makefile: Likewise.
	* progs/Makefile: Likewise.
	* LICENSE: Update copyright for this contribution.

2024-10-17  Dmitry V. Levin  <ldv at owl.openwall.com>

	pam_tcb: Do not use deprecated _pam_overwrite macro.
	* pam_tcb/support.h (pam_tcb_overwrite_string): New macro.
	(_pam_delete): Replace _pam_overwrite with pam_tcb_overwrite_string.
	* pam_tcb/pam_unix_passwd.c (pam_sm_chauthtok): Likewise.

	pam_tcb: Use _pam_delete in the compat implementation of pam_prompt.
	* pam_tcb/compat.c (pam_prompt): Use _pam_delete instead of
	_pam_overwrite followed by _pam_drop.

2023-01-21  Dmitry V. Levin  <ldv at owl.openwall.com>

	Use setgroups syscall instead of the libc function.
	* libs/libtcb.c (sys_setgroups): New function, a thin wrapper around
	setgroups syscall.
	(tcb_drop_priv_r, tcb_gain_priv_r): Use it instead of setgroups.

2023-01-20  Dmitry V. Levin  <ldv at owl.openwall.com>

	Make -DENABLE_SETFSUGID the default and only implementation.
	* libs/libtcb.c [!ENABLE_SETFSUGID]: Remove.
	* tcb.spec: Remove -DENABLE_SETFSUGID.
	* ci/run-build-and-tests.sh: Likewise.

2021-09-30  Björn Esser  <besser82 at fedoraproject.org>

	pam_tcb: Fix "-Wpedantic".
	* pam_tcb/pam_unix_auth.c (pam_sm_authenticate): ISO C forbids
	omitting the middle term of a '?:' expression.
	* pam_tcb/pam_unix_sess.c (pam_sm_open_session): Likewise.
	* pam_tcb/pam_unix_passwd.c (pam_sm_chauthtok): Likewise.
	* pam_tcb/pam_unix_passwd.c (unix_prelim): Likewise.
	* pam_tcb/support.c (_set_ctrl): Likewise.
	* pam_tcb/support.h (pam_tcb_getlogin): New function.
	Small static inline wrapper around getlogin(3).

	* Make.defs: Add "-Wextra" to default CFLAGS.  Add an option to
	enable "-Werror" also.
